--- a/src/Pages/Login/Register/Register.css
+++ b/src/Pages/Login/Register/Register.css
@@ -3,11 +3,12 @@
     width: 50%;
 }
 
-.register-form input {
+.register-form input:not([type=checkbox]) {
     display: block;
     width: 100%;
-    height: 50px;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid lightgrey;
     padding-left: 10px;
-    font-size: 20px;
     margin-bottom: 15px;
 }
